src/test/resources/public/input/typechecking/fail/double_decl/fail14.jova
class Test{

}

class Test{
    private int a;

}